--- a/app/src/main/res/layout/activity_detail_city.xml
+++ b/app/src/main/res/layout/activity_detail_city.xml
@@ -1,9 +1,77 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="openweathermap.poc.br.poc_openweathermap.DetailCityActivity">
+    android:background="@drawable/bg_clima"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/panel_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Consultando dados do clima..."
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/txt_city_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="53dp"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        tool:text="Belo Horizonte" />
+
+    <TextView
+        android:id="@+id/txt_date_now"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/txt_city_name"
+        android:layout_below="@+id/txt_city_name"
+        android:textSize="16dp"
+        tool:text="Quarta-feira 18:00" />
+
+    <TextView
+        android:id="@+id/txt_weather_now"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/txt_date_now"
+        android:layout_below="@+id/txt_date_now"
+        android:textSize="16dp"
+        tool:text="Parcialmente nublado" />
+
+    <TextView
+        android:id="@+id/txt_city_temp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txt_weather_now"
+        android:layout_marginStart="11dp"
+        android:layout_toEndOf="@+id/txt_weather_now"
+        android:textSize="65dp"
+        tool:text="45 ºC" />
+
+    <ImageView
+        android:id="@+id/img_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/txt_city_name"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="21dp"
+        android:background="@drawable/ic_star_unselected" />
+</RelativeLayout>
