--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -4,14 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tool="http://schemas.android.com/apk/res/android"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="openweathermap.poc.br.poc_openweathermap.HomeActivity"
     tools:showIn="@layout/activity_home">
+
+    <TextView
+        android:id="@+id/txt_city_empty"
+        android:padding="25dp"
+        android:gravity="center"
+        android:text="@string/list_empty_cities"
+        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_city_home"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        tool:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
